[package]
name = "const_colors"
version = "0.1.0"
edition = "2018"
readme = "README.md"
description = "For when all you need, are colors in your terminal"
repository = "https://github.com/StratusFearMe21/const_colors"
license = "GPL-3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
